--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-4VAOE89;Database=qurbani;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=ChampionPC;Database=qurbani;Trusted_Connection=True;TrustServerCertificate=true;"
+    //"DefaultConnection": "Server=DESKTOP-4VAOE89;Database=qurbani;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
