dev setup and minors

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ChampionPC;Database=qurbani;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=ChampionPC\\SQLEXPRESS;Database=qurbani;Trusted_Connection=True;TrustServerCertificate=true;"
     //"DefaultConnection": "Server=DESKTOP-4VAOE89;Database=qurbani;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Logging": {
